fixed some buttons on projects don't align correctly and changed one project pic

--- a/react-frontend/src/main.css
+++ b/react-frontend/src/main.css
@@ -27,6 +27,7 @@ main {
   font-size: 18px;
   border-radius: 5px;
   transition: 1s;
+  justify-content: space-between;
 }
 
 .project > img {
@@ -65,9 +66,8 @@ main > h1 {
 
 .sources {
   display: flex;
-  grid-template-columns: 1fr 1fr;
-  justify-items: center;
   gap: 15px;
+  
 }
 .sources > a > button {
   background-color: white;
